[package]
name = "m5stick-kun"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "M5StickC Plus2 倒立振子ロボット (Rust版)"

[dependencies]
# ESP-HAL for ESP32 (no_std + alloc)
esp-hal = { version = "1.0.0", features = ["esp32", "log-04", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
esp-backtrace = { version = "0.18.1", features = ["esp32", "panic-handler", "println"] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-alloc = "0.9.0"

# Embedded HAL traits
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = "0.2"

# Graphics and display (for ST7789 LCD)
embedded-graphics = "0.8"
mipidsi = "0.8"
display-interface = "0.5"
display-interface-spi = "0.5"

# Sensor libraries (IMU)
# Note: May need custom implementation for MPU6886
shared-bus = "0.3"

# Math and filtering
micromath = "2.1"
libm = "0.2"

# Utilities
log = "0.4"
heapless = "0.8"
fugit = "0.3.9"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
overflow-checks = false
strip = false       # Keep symbols for ESP-IDF App Descriptor

[profile.dev]
debug = true
opt-level = 1       # Some optimization for faster dev builds
